--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-SHOP_NAME=graphql
-SHOPIFY_ACCESS_TOKEN=dd4d4dc146542ba7763305d71d1b3d38
+SHOP_NAME=Charmain's Shop
+SHOPIFY_ACCESS_TOKEN=5f5b12708034eb00b387751cc46dfcff
